<resources>
    <string name="app_name">NewsApp</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="browse">Browse</string>
    <string name="share">Share</string>
    <string name="save">Read later</string>
    <string name="listen">Listen</string>
    <string name="warning">Try Again!</string>
    <string name="news_title">Title</string>
    <string name="headline">Headline</string>
    <string name="name">name</string>
    <string name="more">More</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="image_article">Image article</string>
    <string name="profile">Profile</string>
    <string name="location">Location</string>
    <string name="blog">Blog</string>
    <string name="company">Company</string>
    <string name="link">Link</string>
    <string name="image_profile">Image Profile</string>
    <string name="news_app">APP</string>

</resources>