<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="128dp"
    android:layout_margin="8dp"
    android:layout_marginVertical="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/news_image"
        android:layout_width="128dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            android:contentDescription="@string/image_article" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/news_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_toEndOf="@+id/news_image"
        android:maxLines="4"
        android:text="@string/news_title"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/news_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="20dp"
        android:layout_toEndOf="@+id/news_image"
        android:maxLines="1"
        android:text="@string/name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/news_publication_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="12sp" />

</RelativeLayout>